[project]
name = "fastapi-postgre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.49.0",
]
