[project]
name = "fastapi-postgre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.138.0",
    "fastapi-swagger-dark>=0.0.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "starlette>=1.3.1",
    "uvicorn>=0.49.0",
]
